test/types/void/void-field-7.good
void-field-7.chpl:2: error: Field 'a' cannot be declared 'void'. Consider using 'nothing' instead.
