test/types/void/void-field-7.chpl
record r {
  var a : void;
}

new r();
